--- a/contrib/gitian-descriptors/gitian-linux.yml
+++ b/contrib/gitian-descriptors/gitian-linux.yml
@@ -17,7 +17,7 @@ packages:
 - "binutils-gold"
 reference_datetime: "2016-01-01 00:00:00"
 remotes:
-- "url": "https://github.com/genavarov/litecoin.git"
+- "url": "https://github.com/genavarov/lamacoin.git"
   "dir": "litecoin"
 files: []
 script: |
