--- a/contrib/gitian-descriptors/gitian-win.yml
+++ b/contrib/gitian-descriptors/gitian-win.yml
@@ -20,7 +20,7 @@ packages:
 - "zip"
 reference_datetime: "2016-01-01 00:00:00"
 remotes:
-- "url": "https://github.com/genavarov/litecoin.git"
+- "url": "https://github.com/genavarov/lamacoin.git"
   "dir": "litecoin"
 files: []
 script: |
